Update InstanceServiceImpl.java
Removed property that's no longer required